# LLM_for_EVO2

./: .gitignore  LICENSE  README.md  api_config.json  main.py  pyproject.toml  run.py
src/evo2_sequence_designer/: __init__.py  __main__.py  main.py
src/evo2_sequence_designer/agents/: __init__.py  agent_coordinator.py  iteration_agent.py  quality_agent.py
src/evo2_sequence_designer/analysis/: __init__.py  sequence_analyzer.py
src/evo2_sequence_designer/demos/: __init__.py
src/evo2_sequence_designer/design/: __init__.py  llm_evo2_collaborative_designer.py  three_stage_designer.py
src/evo2_sequence_designer/models/: evo2_client.py  glm_client.py  project.py
src/evo2_sequence_designer/optimization/: __init__.py  llm_optimizer.py
src/evo2_sequence_designer/utils/: __init__.py  logger.py
